--- a/mod2-solution/style.css
+++ b/mod2-solution/style.css
@@ -2,23 +2,56 @@
 	box-sizing: border-box;
 }
 
+/********** Base style **********/
 body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
 	font-size: 175%;
+	text-align: center;
+	font-weight: lighter;
+}
+
+h2 {
+	font-size: 125%;
+	font-weight: lighter;
+	text-align: center;
+	border-left: 1px solid black;
+	border-bottom: 1px solid black;
+	margin: 0;
+	padding: 2px;
+	width: 120px;	
+	position: absolute;
+	top:0;
+	right:0;
 }
 
 section {
 	border: 1px solid black;
-	background-color: #dadada;
+	background-color: lightgrey;
 	margin: 10px;
+	position: relative;
 }
 
 p {
 	padding: 5px;
+	margin-top: 35px;
 }
+
+#item1{
+	background-color: #d59898;
+}
+
+#item2{
+	background-color: #c14543;
+	color: white;
+}
+
+#item3{
+	background-color: #e5d198;
+}
+
 
 /********** Large devices min 992px **********/
 @media (min-width: 992px) {.col-lg-4 {
