--- a/mod3-solution/css/styles.css
+++ b/mod3-solution/css/styles.css
@@ -14,7 +14,14 @@ h3 { /* Section Names */
     text-align: center;
     font-weight: 350; 
 }
-.section p { /* Section Descriptions */
+.section { /* Section Descriptions */
+    margin-bottom: 30px;
+    background-color: #F5F5F5;
+    border-radius: 30px;
+}
+
+p {
+    margin-bottom: 40px;
     padding: 10px;
 }
 
