--- a/mod3-solution/css/styles.css
+++ b/mod3-solution/css/styles.css
@@ -4,8 +4,6 @@ body {
     font-size: 16px;
 }
 h1 { /* Our Menu Title */
-    margin-top: 50px;
-    margin-bottom: 30px;
     color: #284b63;
     font-weight: 300;
 }
@@ -13,15 +11,16 @@ h3 { /* Section Names */
     color: #5FA8AB;
     text-align: center;
     font-weight: 350; 
-}
-.section { /* Section Descriptions */
-    margin-bottom: 30px;
-    background-color: #F5F5F5;
-    border-radius: 30px;
-}
+    margin: 10px;
 
+}
+section { /* Section Descriptions */
+    background-color: #EBEBEB;
+    margin: 10px;
+    border-radius: 30px;
+    padding: 10px;
+}
 p {
-    margin-bottom: 40px;
     padding: 10px;
 }
 
